Hide warnings on java.lang.reflect access by ehcache. Ehcache handles this gracefully, the warning does not need to be taken seriously, but clutters stdout when using as CLI